# command-center-4

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  vite.config.ts
apps/calendar-app/: CalendarApp.tsx  index.html  main.tsx
apps/example-app/: ExampleApp.tsx  index.html  main.tsx
apps/friends-app/: FriendCard.tsx  FriendForm.tsx  FriendsApp.tsx  index.html  main.tsx  types.ts
apps/tauri-container/: TauriContainer.tsx  index.html  main.tsx
apps/wardrobe-app/: ClothingCard.tsx  ClothingForm.tsx  FitCanvas.tsx  FitCard.tsx  FitForm.tsx  WardrobeApp.tsx  index.html  main.tsx  types.ts
apps/weather-app/: WeatherApp.tsx  index.html  main.tsx
shared/: index.css
shared/api/: index.ts
shared/components/: Heatmap.tsx
shared/contexts/: AppProviders.tsx  EventContext.tsx  ImageContext.tsx  StorageContext.tsx  ThemeContext.tsx
shared/styles/: palette.css
shared/types/: bindings.ts  events.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: background_removal.rs  env.rs  geolocation.rs  image_service.rs  lib.rs  main.rs  weather.rs  weather_cache.rs
