[package]
name = "command-center-4"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "command_center_4_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri-specta = { version = "2.0.0-rc.20", features = ["typescript"] }
dotenvy = "0.15"
chrono = "0.4"
moka = { version = "0.12", features = ["future"] }
tauri-plugin-store = "2"
image = "0.25"
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
ndarray = "0.16"

